--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 <body>
     
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="/usn">usn</a>
 
     <a href="#" onclick="signOut();">Sign out</a>
 
