--- a/views/usn.ejs
+++ b/views/usn.ejs
@@ -4,20 +4,53 @@
     <title>
         Student Achievements
     </title>
-    <meta name="google-signin-client_id" content="272476288648-gbr69du8vvu6pi71lh1vf0prndc2jcje.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 
 <body>
+
+    <% if(isValid == false) { %>
+        <script>
+            alert("Invalid usn, phone number or bmsce email id");
+            window.location.href = "/";
+        </script>
+    <% } %>
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="/" onclick="signOut();">Sign out</a>
     
     <form id="usnForm" action="/feed" method="post">
-      <label htmlFor="usn">Enter USN </label>
-      <input type="text" name="usn" id="usn" class="input-text"/>
+        <label htmlFor="usn">Enter USN </label>
+        <input type="text" name="usn" id="usn" class="input-text"/>
 
-      <label htmlFor="phone_no">Enter The Phone Number </label>
-      <input type="text" name="phone_no" id="phone_no" class="input-text"/>
+        <label htmlFor="phone_no">Enter The Phone Number </label>
+        <input type="text" name="phone_no" id="phone_no" class="input-text"/>
 
-      <input type="submit" value="submit">
+        <input type="hidden" name="name" id="name" class="input-text"/>
+        <input type="hidden" name="email" id="email" class="input-text"/>
+        <input type="hidden" name="image" id="image" class="input-text"/>
+
+        <input type="submit" value="submit">
     </form>
+
+    <script>
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            // console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            document.getElementById("name").value = profile.getName();
+            document.getElementById("image").value = profile.getImageUrl();
+            document.getElementById("email").value = profile.getEmail();
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+            console.log('User signed out.');
+            });
+        }
+
+    </script>
 </body>
 </html>
