--- a/views/usn.ejs
+++ b/views/usn.ejs
@@ -4,53 +4,51 @@
     <title>
         Student Achievements
     </title>
+     <!-- Google API -->
     <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="../style/navbar.css" rel="stylesheet" media="all">
+    <link href="../style/form.css" rel="stylesheet" media="all">
+    <link href="../style/feed.css" rel="stylesheet" media="all">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
+    <body>
+        <header>
+            <nav class="navbar">
+                <div class="container">
+                  <span class="navbar-brand mb-0 h1">Student Achievement</span>
+                  <div class="d-flex flex-row ">
+                      <div class="g-signin2" id="signIn" data-onsuccess="onSignIn"  ></div>
+                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
+                  </div>
+                </div>
+              </nav>
+        </header>
+        
+        <main>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5">
+                        <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png"  />
+                    </div>
+                    <div class="col-12 col-md-6 pt-5 p-5">
+                        <%- include('usnForm') %>
+                        <% if(isValid == false ) { %>
+                            <script>
+                                alert("Invalid usn, phone number or bmsce email id");
+                                window.location.href = "/";
+                            </script>
+                        <% } %>
+                    </div>
+                </div>
+            </div>
+        </main>
 
-<body>
-
-    <% if(isValid == false) { %>
-        <script>
-            alert("Invalid usn, phone number or bmsce email id");
-            window.location.href = "/";
-        </script>
-    <% } %>
-
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <a href="/" onclick="signOut();">Sign out</a>
-    
-    <form id="usnForm" action="/feed" method="post">
-        <label htmlFor="usn">Enter USN </label>
-        <input type="text" name="usn" id="usn" class="input-text"/>
-
-        <label htmlFor="phone_no">Enter The Phone Number </label>
-        <input type="text" name="phone_no" id="phone_no" class="input-text"/>
-
-        <input type="hidden" name="name" id="name" class="input-text"/>
-        <input type="hidden" name="email" id="email" class="input-text"/>
-        <input type="hidden" name="image" id="image" class="input-text"/>
-
-        <input type="submit" value="submit">
-    </form>
-
-    <script>
-
-        function onSignIn(googleUser) {
-            var profile = googleUser.getBasicProfile();
-            // console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-            document.getElementById("name").value = profile.getName();
-            document.getElementById("image").value = profile.getImageUrl();
-            document.getElementById("email").value = profile.getEmail();
-        }
-
-        function signOut() {
-            var auth2 = gapi.auth2.getAuthInstance();
-            auth2.signOut().then(function () {
-            console.log('User signed out.');
-            });
-        }
-
-    </script>
-</body>
+        <script src="js/signin.js"></script>
+        <script src="js/signout.js"></script>
+        <script src="/js/validate.js"></script>
+    </body>
 </html>
