integration of front and back end

--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse navis" id="navbar">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="/viewAchievements" style="color: green; margin-right: 1rem;">View Achivement </a>
+                <a class="nav-link add-achievement" href="/viewAchievements" style="color: green; margin-right: 1rem;">View Achivement </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut"  style="display: block;">Sign Out</a>
@@ -58,7 +58,7 @@
               <%- include('addAchievementForm') %>
           </div>
           <div class="img-container col-12 col-sm-6 mt-5 pt-5 d-none d-md-block" >
-            <img src="../img/step.svg"  class="add-img" />
+            <img src="../img/progress.svg"  class="add-img" />
           </div>
           </div>
         </div>
