--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -57,3 +57,15 @@ body {
         left: 0 !important;
       }   
 }
+
+.add-achievement {
+    background-color: transparent;
+    color: green;
+    margin-right: 1rem;
+    border: none;
+     
+}
+.add-achievement:hover {
+    text-decoration: underline; 
+    color: green;
+}
