--- a/views/usn.ejs
+++ b/views/usn.ejs
@@ -31,7 +31,7 @@
         <main>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5">
+                    <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5" style="text-align: center; padding-left: 40px;">
                         <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png"  />
                     </div>
                     <div class="col-12 col-md-6 pt-5 p-5">
