--- a/views/usnForm.ejs
+++ b/views/usnForm.ejs
@@ -11,7 +11,7 @@
 
     <div class="col-12 mt-3">
       <label for="phone_no" class="form-label">Phone Number</label>
-      <input type="text" class="form-control" id="phone_no" placeholder="Enter your phone Number" required>
+      <input type="text" class="form-control" id="phone_no" name="phone_no" placeholder="Enter your phone Number" required>
       <div class="invalid-feedback">
         Enter a valid Phone Number
       </div>
