--- a/views/viewAchievements.ejs
+++ b/views/viewAchievements.ejs
@@ -60,7 +60,7 @@
                         <th scope="col">Award</th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <!-- <tbody>
                       <% var count = 1; %>
                       <% for(let achievement in achievements) { %>
                         <% for(var i = 0; i < achievements[achievement].length; ++i) { %>
@@ -76,7 +76,7 @@
                           <% count += 1 %>
                         <% } %>
                       <% } %>
-                    </tbody>
+                    </tbody> -->
                   </table>
             </div>
         </main>
