--- a/public/style/form.css
+++ b/public/style/form.css
@@ -15,7 +15,9 @@
     box-shadow: 2px 2px 5px gray;
     background-color: white;
 }
-
+.mul-select{
+    width: 100%;
+}
 .submitBtn {
     background-color:white;
     border: 2px solid #30398C;
