--- a/views/addAchievementForm.ejs
+++ b/views/addAchievementForm.ejs
@@ -44,12 +44,12 @@
       <div class="col-12 mt-3">  
         <label for="level" class="form-label">Select the level </label>
         <select name="level" class="form-select" required>
-            <option value="">--Please choose an option--</option>
+            <option value="">--Select the level of event--</option>
             <option value="college" >College</option>
             <option value="district" >District</option>
             <option value="state" >State</option>
             <option value="national" >National</option>
-            <option value="international" >InterNational</option>
+            <option value="international" >International</option>
         </select>
 
         <div class="invalid-feedback">
