--- a/views/adminForm.ejs
+++ b/views/adminForm.ejs
@@ -1,12 +1,12 @@
-<form class="adminform" action="/studentAchievement" method="post">
+<form class="adminform" action="/studentAchievements" method="post">
     <div class="container-fluid h-100 bg-light text-dark">
         <br>
         <div class="row justify-content-left align-items-center h-100">
-            <div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">
+            <div class="col col-sm-6 col-lg-4 col-xl-3">
                 <div class="form-group">
                   <label for="departement" class="form-label">Choose the departments<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
-                    <select class="mul-select" multiple="true" name="department">
-                      <option value="all">All</option>
+                    <select class="mul-select" multiple="true" name="department" required>
+                      <!-- <option value="all">All</option>
                         <option value="CE">CE</option>
                         <option value="ME">ME</option>
                         <option value="EE">EE</option>
@@ -20,19 +20,32 @@
                         <option value="BT">BT</option>
                         <option value="CH">CH</option>
                         <option value="AS">AS</option>
-                        <option value="AM">AM</option>
-                        <option value="clear" class="clearAll">Clear all selection</option>
+                        <option value="AM">AM</option> -->
+                        <% 
+                        for(var i =0; i < departments.length; ++i) { %>
+                            <option  value="<%=departments[i]%>"><%=departments[i]%></option>
+                        <% }%>
                     </select>
                 </div> 
               </div>
-
+              <div class="col col-sm-6 col-lg-4 col-xl-3">
+                <div class="form-group">
+                  <label for="batch" class="form-label">Choose the batch<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
+                    <select class="mul-select" multiple="true" name="batch" required>
+                      <option value="all">All</option>
+                      <% 
+                      for(var i =0; i < batch.length; ++i) { %>
+                          <option  value="<%=batch[i]%>"><%=batch[i]%></option>
+                      <% }%>
+                    </select>
+                </div> 
+              </div>
               <div class="col-12 col-sm-1 mt-3">
                 <label for="from_year" class="form-label">From</label>
                 <select name="from_year" class="form-select" id="from_year" required>
                     <% let year = new Date().getFullYear();
                     for(var i = 2012; i < year; ++i) { %>
-                        <option 
-                        value="<%=i%>"><%=i%></option>
+                        <option  value="<%=i%>"><%=i%></option>
                     <% }%>
                 </select>
              </div>
@@ -40,19 +53,24 @@
              <div class="col-12 col-sm-1 mt-3">
                 <label for="to_year" class="form-label">To</label>
                 <select name="to_year" class="form-select" id="to_year" required>
+                  <option  value="">--Select From year--</option>
               </select>
            </div>
            <div class="col-3">
-            <button class="submitBtn btn mt-5" type="submit" value="Submit">View Student Achievement</button>
+             <div class="row">
+               <div class="col-9">
+                <button class="submitBtn btn mt-5" type="submit" value="Submit">View Student Achievement</button>
+               </div>
+               <div class="col-3">
+                <% if(download == true) {%>
+                  <img src="../img/download.svg" class="mt-5 pt-1" width="30">
+                <% }%>
+               </div>
+              
+            
+             </div>
+            
           </div>
         </div>    
     </div>
 </form>
-<script>
-    function clear(){
-        $('.clearAll').on('click', function() {
-        $(".mul-select option:selected").prop("selected", false);
-});
-    }
-  
-</script>
