checkin the onClick

--- a/views/userDetailForm.ejs
+++ b/views/userDetailForm.ejs
@@ -1,4 +1,4 @@
-<form class="row usnForm needs-validation" novalidate id="usnForm"  action="/verifyPhone" method="post">
+<form class="row usnForm needs-validation" novalidate id="usnForm"  action="/addAchievement" method="post">
    <h4 class="text-left">Enter the following details</h4>
 
     <div class="col-12 mt-3">
