--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                 <div class="container">
                   <span class="navbar-brand mb-0 h1">Student Achievement</span>
                   <div class="d-flex flex-row ">
-                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
+                      
                   </div>
                 </div>
               </nav>
@@ -34,24 +34,27 @@
                         <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png"  />
                     </div>
                     <div class="col-12 col-md-6 pt-5 p-5">
-                        <form class="row usnForm" action="/verifyUser" method="post" id="signInForm">
+                        <div class="row usnForm" >
                             <h4 class="text-left">Student Achievement</h4>
                             <p>One stop destination to save all you Achievements</p>
-                            <input type="hidden" name="name" id="name" class="input-text"/>
-                            <input type="hidden" name="email" id="email" class="input-text"/>
-                            <input type="hidden" name="image" id="image" class="input-text"/>
-                            <button class="signInbutton" id="my-signin2" data-onsuccess="onSignIn" type="submit"></button>
-                        </form>
-                    
+                            <%= error %> 
+                            <form class="mt-2" action="/student_signup" method="post" id="signInForm" >
+                                <button class="btn btn-outline-primary btn-lg btn-block w-100" type="submit" >Student sign up</button>
+                            </form>
+                            <form class="mt-2" action="/student_signin" method="post" id="signInForm">
+                                <!-- <button class="signInbutton" id="my-signin2" data-onsuccess="onSignIn" type="submit" hidden ></button> -->
+                                <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit" id="student" >Student sign in</button>
+                            </form>
+                            <form class="mt-2" action="/teacher_signin" method="post" id="signInForm">
+                                <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit" >Teacher sign in</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
-        <script>
-    </script>
-        
-        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-        <script src="js/signin.js"></script>
+
+         <script src="js/signin.js"></script>
         <script src="js/signout.js"></script>
         <script src="/js/validate.js"></script>
     </body>
