--- a/views/student_signin.ejs
+++ b/views/student_signin.ejs
@@ -7,6 +7,7 @@
      <!-- Google API -->
     <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/client:platform.js?onload=init" async defer></script>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="../style/navbar.css" rel="stylesheet" media="all">
@@ -21,31 +22,36 @@
                 <div class="container">
                   <span class="navbar-brand mb-0 h1">Student Achievement</span>
                   <div class="d-flex flex-row ">
-                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" style="display:block">Sign out</a>
+                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
                   </div>
                 </div>
               </nav>
         </header>
         
         <main>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5" style="text-align: center; padding-left: 40px;">
-                        <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png"  />
-                    </div>
-                    <div class="col-12 col-md-6 pt-5 p-5">
-                        <%- include('userDetailForm.ejs') %>
-                        <% if(isValid == false ) { %>
-                            <script>
-                                alert("Invalid usn, phone number or bmsce email id");
-                                window.location.href = "/";
-                            </script>
-                        <% } %>
+            <div class="container-fluid  mt-5 pt-5">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
+                        <form class="usnForm" action="/addAchievement" method="post" id="signInForm">
+                            <h4 class="text-left">Sign in with Google</h4>
+                            <input type="hidden" name="name" id="name" class="input-text"/>
+                            <input type="hidden" name="email" id="email" class="input-text"/>
+                            <input type="hidden" name="image" id="image" class="input-text"/>
+                   
+                            <button class="signInbutton" id="my-signin2" data-onsuccess="onSignIn" type="submit" ></button>
+                        </form>
                     </div>
                 </div>
             </div>
         </main>
-
+       
+        <script>
+        window.addEventListener('load', (event) => {
+        const element = document.getElementById("my-signin2");
+        element.click();
+        });
+        </script>
+        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
         <script src="js/signin.js"></script>
         <script src="js/signout.js"></script>
         <script src="/js/validate.js"></script>
