--- a/views/teacher_signin.ejs
+++ b/views/teacher_signin.ejs
@@ -21,31 +21,35 @@
                 <div class="container">
                   <span class="navbar-brand mb-0 h1">Student Achievement</span>
                   <div class="d-flex flex-row ">
-                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" style="display:block">Sign out</a>
+                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
                   </div>
                 </div>
               </nav>
         </header>
         
         <main>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5" style="text-align: center; padding-left: 40px;">
-                        <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png"  />
-                    </div>
-                    <div class="col-12 col-md-6 pt-5 p-5">
-                        <%- include('userDetailForm.ejs') %>
-                        <% if(isValid == false ) { %>
-                            <script>
-                                alert("Invalid usn, phone number or bmsce email id");
-                                window.location.href = "/";
-                            </script>
-                        <% } %>
+            <div class="container-fluid  mt-5 pt-5">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
+                        <form class="usnForm" action="/studentAchievements" method="post" id="signInForm">
+                            <h4 class="text-left">Sign in with Google</h4>
+                            <input type="hidden" name="name" id="name" class="input-text"/>
+                            <input type="hidden" name="email" id="email" class="input-text"/>
+                            <input type="hidden" name="image" id="image" class="input-text"/>
+                            <button class="signInbutton" id="my-signin2" data-onsuccess="onSignIn" type="submit" ></button>
+                        </form>
                     </div>
                 </div>
             </div>
         </main>
-
+     
+        <script>
+            window.addEventListener('load', (event) => {
+            const element = document.getElementsByClassName("signInbutton");
+            element.click();});
+        </script>
+        
+        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
         <script src="js/signin.js"></script>
         <script src="js/signout.js"></script>
         <script src="/js/validate.js"></script>
