pop up without workin

--- a/views/student_signin.ejs
+++ b/views/student_signin.ejs
@@ -45,12 +45,12 @@
             </div>
         </main>
        
-        <script>
+        <!-- <script>
         window.addEventListener('load', (event) => {
         const element = document.getElementById("my-signin2");
         element.click();
         });
-        </script>
+        </script> -->
         <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
         <script src="js/signin.js"></script>
         <script src="js/signout.js"></script>
