--- a/views/teacher_signin.ejs
+++ b/views/teacher_signin.ejs
@@ -43,11 +43,11 @@
             </div>
         </main>
      
-        <script>
+        <!-- <script>
             window.addEventListener('load', (event) => {
             const element = document.getElementsByClassName("signInbutton");
             element.click();});
-        </script>
+        </script> -->
         
         <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
         <script src="js/signin.js"></script>
