--- a/views/student_signup.ejs
+++ b/views/student_signup.ejs
@@ -43,12 +43,12 @@
             </div>
         </main>
       
-        <script>
-            window.addEventListener('load', (event) => {
+        <!-- <script> 
+        window.addEventListener('load', (event) => {
             const element = document.getElementById("my-signin2");
             element.click();
             });
-        </script>
+        </script> -->
         
         <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
         <script src="js/signin.js"></script>
