--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -24,7 +24,7 @@
     </script>
   <% }else if(isValid == true) { %>
     <script>
-      alert("Success");
+      alert("Cool!");
     </script>
   <% } %>
 
