--- a/views/userDetailForm.ejs
+++ b/views/userDetailForm.ejs
@@ -22,6 +22,6 @@
     <input type="hidden" name="image" id="image" class="input-text" value="<%=image %>"/>
 
     <div class="col-12">
-      <button class=" submitBtn btn  mt-5" type="submit" value="Submit" >Send OTP</button>
+      <button class=" submitBtn btn  mt-5" type="submit" value="Submit" >Submit</button>
     </div>
   </form>
