--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,11 +29,11 @@
         
         <main>
             <div class="container-fluid">
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5" style="text-align: center; padding-left: 40px;">
                         <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png"  />
                     </div>
-                    <div class="col-12 col-md-6 pt-5 p-5">
+                    <div class="col-12 col-md-6 pt-5 p-5 align-items-center mt-5">
                         <div class="row usnForm" >
                             <h4 class="text-left">Student Achievement</h4>
                             <p>One stop destination to save all you Achievements</p>
