--- a/views/adminForm.ejs
+++ b/views/adminForm.ejs
@@ -49,7 +49,10 @@
                <div class="col-3">
                 <% if(download == true) {%>
                   <img src="../img/download.svg" class="mt-5 pt-1" width="30">
-                <% }%>
+                <% } else {%>
+
+                   
+                  <% }%>
                </div>
               
             
