--- a/views/teacher_signin.ejs
+++ b/views/teacher_signin.ejs
@@ -32,7 +32,7 @@
             <div class="container-fluid  mt-5 pt-3">
                 <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-12 col-md-6 pt-5 p-3 text-center d-flex align-items-center justify-content-center">
-                        <form class="usnForm d-flex flex-column align-items-center justify-content-center" action="/studentAchievements" method="post" id="signInForm">
+                        <form class="usnForm d-flex flex-column align-items-center justify-content-center" action="/studentAchievements" method="get" id="signInForm">
                             <h1 id="display_sign_in" class="text-left">Sign in with Google</h1>
 
                             <div class="d-flex flex-column align-items-center justify-content-center" id="display_signin_info">
