--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -78,11 +78,11 @@ body {
     background-color: #30398C !important;
 }
 
-#or-option{
+.or-option{
     display: none;
 }
 
-#option-button {
+.option-button {
     display: none;
     width: 100%;
      height: 20px; 
@@ -96,9 +96,17 @@ body {
     font-style: italic;
 }
 
-#display_image {
+.display_image {
     border-radius:50%;
     width:40px;
     height:40px;
     object-fit:cover;
+}
+
+.display_usn {
+    display: none;
+}
+
+.display_signin_info{
+    display: none;
 }
