--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -28,6 +28,16 @@
     </script>
   <% } %>
 
+  <% if(is_achievement_updated == true) { %>
+    <script>
+        alert("Added Successfully");
+    </script>
+  <% }else if(is_achievement_updated == false) { %>
+    <script>
+      alert("Failed to add achievement");
+    </script>
+  <% } %>
+
       <header>
         <nav class="navbar navbar-expand-lg ">
           <span class="navbar-brand mx-5 h1">Student Achievement</span>
