--- a/views/userDetailForm.ejs
+++ b/views/userDetailForm.ejs
@@ -1,9 +1,9 @@
-<form class="row usnForm needs-validation" novalidate id="usnForm"  action="/addAchievement" method="post">
+<form class="row usnForm needs-validation" novalidate id="usnForm"  action="/register" method="post">
    <h4 class="text-left">Enter the following details</h4>
 
     <div class="col-12 mt-3">
       <label for="usn" class="form-label">USN</label>
-      <input type="text" class="form-control" id="usn" name="usn" placeholder="Enter your USN" required>
+      <input type="text"  style="text-transform:uppercase" class="form-control" id="usn" name="usn" placeholder="Enter your USN" required>
       <div class="invalid-feedback">
         USN cannot be empty
       </div>
