--- a/public/style/signin.css
+++ b/public/style/signin.css
@@ -1,15 +1,18 @@
-.display_signin_info{
+#continue-button{
     display: none;
 }
-
-#display_image {
+#display_usn{
     display: none;
+}
+#display_image {
     border-radius:50%;
     width:40px;
     height:40px;
     object-fit:cover;
 }
-
+#display_signin_info {
+    display: none;
+}
 #option-button {
      width: 100%;
      height: 20px; 
