--- a/public/style/signup.css
+++ b/public/style/signup.css
@@ -1,15 +1,16 @@
-.display_signin_info{
+#continue-button{
     display: none;
 }
 
 #display_image {
-    display: none;
     border-radius:50%;
     width:40px;
     height:40px;
     object-fit:cover;
 }
-
+#display_signin_info {
+    display: none;
+}
 #option-button {
      width: 100%;
      height: 20px; 
