--- a/views/userDetailForm.ejs
+++ b/views/userDetailForm.ejs
@@ -17,9 +17,9 @@
       </div>
     </div>
 
-    <input type="hidden" name="name" id="name" class="input-text" value="<%=name %>">
-    <input type="hidden" name="email" id="email" class="input-text" value="<%=email %>"/>
-    <input type="hidden" name="image" id="image" class="input-text" value="<%=image %>"/>
+    <input type="hidden" name="name" id="name" class="input-text" value="<%=userData.name %>">
+    <input type="hidden" name="email" id="email" class="input-text" value="<%=userData.email %>"/>
+    <input type="hidden" name="image" id="image" class="input-text" value="<%=userData.image %>"/>
 
     <div class="col-12">
       <button class=" submitBtn btn  mt-5" type="submit" value="Submit" >Submit</button>
