--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -6,7 +6,9 @@ body {
     width: 100%;
     height: 100vh;
 }
+
 .navbar {
+    padding: 1rem 5rem;
     background-color: #fff !important;
     color:#30398C;
     overflow-x: hidden;
@@ -18,22 +20,21 @@ body {
     border-radius: 5px;
     text-decoration: none;
     margin-left: 10px;
-    display: none;
 }
 .signOut:hover{
     background-color: #fff;
     color: #30398C !important;
     border:2px solid #30398C ;
 }
-@media screen and (max-width:1108px) {
+@media screen and (max-width:760px) {
     .signOut {
-      max-width: 150px;
+      max-width: 130px;
       margin: 0 !important;
       background-color: transparent;
       color: black !important;
     }
     .image {
-        display: none;
+     display: none;
     }
 }
 .image{
@@ -42,27 +43,6 @@ body {
     height:40px;
     object-fit:cover;
 }
-
-.nav-link {
-    text-decoration: none;
-    color: black;
-}
-.navis{
-  position: relative !important;
-  left: 50% !important;
-
-}
-.signInbutton{
-    border: none;
-    background: transparent;
-    margin-top: 3rem;
-}
-@media screen and (max-width:992px) {
-    .navis{
-        left: 0 !important;
-      }   
-}
-
 .add-achievement {
     background-color: transparent;
     color: green;
