--- a/views/adminForm.ejs
+++ b/views/adminForm.ejs
@@ -2,30 +2,48 @@
     <div class="container-fluid h-100 bg-light text-dark">
         <br>
         <div class="row justify-content-left align-items-center h-100">
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
+            <div class="col col-sm-6 col-lg-3 ">
+              <div class="row">
                 <div class="form-group">
                   <label for="selected_departments" class="form-label">Choose the departments<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
-                    <select class="mul-select" multiple="true" name="selected_departments" required>
-                      <option value="all">All</option>
+                    <select class="department-select mul-select" multiple="true" name="selected_departments" id="mul-select" required>
+                      
                       <% for(var i = 0; i < departments.length; ++i) { %>
                           <option  value="<%=departments[i]%>"><%=departments[i]%></option>
                       <% }%>
                     </select>
                 </div> 
               </div>
-              <div class="col col-sm-6 col-lg-4 col-xl-3">
+              <div>
+                <div class="btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-outline-success active">
+                    <input type="checkbox" id="select-all"> Select All
+                  </label>
+                </div>
+              
+              </div>
+              </div>
+             
+              <div class="col col-sm-6 col-lg-3 ">
                 <div class="form-group">
                   <label for="selected_batches" class="form-label">Choose the batch<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
-                    <select class="mul-select" multiple="true" name="selected_batches" required>
-                      <option value="all">All</option>
-                      <% for(var i = 0; i < batches.length; ++i) { %>
-                          <option  value="<%=batches[i]%>"><%=batches[i]%></option>
+                    <select class="batch-select mul-select" multiple="true" name="selected_batches" required>
+                     
+                      <% for(let batch of all_batches) { %>
+                          <option  value="<%=batch%>"><%=batch%></option>
                       <% }%>
                     </select>
                 </div> 
+                <div class="btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-outline-success active">
+                    <input type="checkbox" id="select-batch-all"> Select All
+                  </label>
+                </div>
+               
               </div>
-              <div class="col-12 col-sm-1 mt-3">
-                <label for="from_year" class="form-label">From</label>
+
+              <div class="col-12 col-sm-1 col-lg-1 ">
+                <label for="from_year" class="form-label">From </label>
                 <select name="from_year" class="form-select" id="from_year" required>
                     <% let year = new Date().getFullYear();
                     for(var i = 2012; i < year; ++i) { %>
@@ -34,8 +52,9 @@
                 </select>
              </div>
 
-             <div class="col-12 col-sm-1 mt-3">
-                <label for="to_year" class="form-label">To</label>
+             
+             <div class="col-12 col-sm-3 col-lg-1 ">
+                <label for="to_year" class="form-label">To </label>
                 <select name="to_year" class="form-select" id="to_year" required>
                   <option  value="">--Select From year--</option>
               </select>
@@ -43,11 +62,11 @@
            <div class="col-3">
              <div class="row">
                <div class="col-9">
-                <button class="submitBtn btn mt-5" type="submit" value="Submit">View Student Achievement</button>
+                <button class="submitBtn btn mt-3" type="submit" value="Submit">View Student Achievement</button>
                </div>
                <div class="col-3">
                 <% if(download == true) {%>
-                  <img src="../img/download.svg" class="mt-5 pt-1" width="30">
+                  <img src="../img/download.svg" class="mt-2 pt-1" width="30">
                 <% } else {%>
 
                    
