--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,8 +42,8 @@
                                 <!-- <button class="signInbutton" id="my-signin2" data-onsuccess="onSignIn" type="submit" hidden ></button> -->
                                 <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit" id="student" >Student sign in</button>
                             </form>
-                            <form class="mt-2" action="/teacher_signin" method="post" id="signInForm">
-                                <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit" >Teacher sign in</button>
+                            <form class="mt-2" action="/admin_signin" method="post" id="signInForm">
+                                <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit" >Admin sign in</button>
                             </form>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
             </div>
         </main>
 
-         <script src="js/signin.js"></script>
+        <script src="js/signin.js"></script>
         <script src="js/signout.js"></script>
         <script src="/js/validate.js"></script>
     </body>
