--- a/views/viewAchievements.ejs
+++ b/views/viewAchievements.ejs
@@ -31,13 +31,14 @@
             </ul>
             <div class="d-flex flex-column flex-md-row ">
               <form method="post" action="/addAchievement" >
+                <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>"/>
                 <button class="nav-link add-achievement"  style="color: green; margin-right: 1rem;" type="submit">Add Achievements </button>
               </form>
               
 
               <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut">Sign Out</a>
              </div>
-             <img src="<%=userData.image %>" alt="" class="image mx-2"/>
+             <img src="<%=userData.image%>" alt="" class="image mx-2"/>
           </div>
         </nav>
       </header>
