--- a/views/studentAchievements.ejs
+++ b/views/studentAchievements.ejs
@@ -23,7 +23,8 @@
 
   <header >
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">Student Achievement</span>  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-brand mb-0 h1">Student Achievement</span>  
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -41,11 +42,10 @@
     <%- include('adminForm') %>
     <div class="container-fluid d-flex justify-content-left table-responsive  mt-5">
         <table class="table">
+            
             <thead>
               <tr>
                 <th scope="col" class="d-none d-md-block">Sl.No</th>
-                <th scope="col">Department</th>
-                <th scope="col">Year</th>
                 <th scope="col">Usn</th>
                 <th scope="col">Name</th>
                 <th scope="col">Email</th>
@@ -53,23 +53,21 @@
                 <th scope="col">Details/Location</th>
                 <th scope="col">Level</th>
                 <th scope="col">Award</th>
+                <th scope="col">Department</th>
+                <th scope="col">Batch</th>
+                <th scope="col">Year</th>
               </tr>
             </thead>  
             
-            <% let i = 1; for(let department in data) { %>
-              <% for(let batch in data[department]) { %>
-                <% for(let year in data[department][batch]) {%>
-                  <% if(data[department][batch][year]) { %>
-                    <% for(let achievement of data[department][batch][year]) { %>
-                      <tr>
-                        <th scope="col"><%=i%></th>
-                        <th scope="col"><%=department%></th>
-                        <th scope="col"><%=year%></th>
-                        <% for(let ele of achievement) { %>
-                          <th scope="col"><%=ele%></th>
-                        <% } %>
-                      </tr>
-            <% i++; } } } } } %>
+            <% let i = 1; for(let batch in data) { %>
+              <% for(let achievement of data[batch]) { %>
+                <tr>
+                  <th scope="col"><%=i%></th>
+                  <% for(let ele of achievement) { %>
+                    <th scope="col"><%=ele%></th>
+                  <% } %>
+                </tr>
+            <% i++; } } %>
 
           </table>
     </div>
