--- a/views/userDetailForm.ejs
+++ b/views/userDetailForm.ejs
@@ -20,8 +20,9 @@
     <input type="hidden" name="name" id="name" class="input-text" value="<%=userData.name %>">
     <input type="hidden" name="email" id="email" class="input-text" value="<%=userData.email %>"/>
     <input type="hidden" name="image" id="image" class="input-text" value="<%=userData.image %>"/>
+    <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>"/>
 
     <div class="col-12">
       <button class=" submitBtn btn  mt-5" type="submit" value="Submit" >Submit</button>
     </div>
-  </form>
+</form>
