--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -34,8 +34,9 @@
                     <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
                         <span class="badge badge-success">Registration Successfull</span>
                         <form class="" action="/addAchievement" method="post" id="register">
+                            <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>"/>
                             <% if(is_achievement_updated == true) { %>
-                                <input type="hidden" name="is_achievement_updated" value="updated_successfully" />
+                                <input type="hidden" name="is_achievement_updated" value="true" />
                             <% } %>
                         </form>
                     </div>
